# FastAPI---BookStore

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: ad971c02c3f3_initial.py
src/: .gitignore  auth_utils.py  config.py  database.py  exceptions.py  handlers.py  main.py  pyproject.toml
src/api/: authors.py  books.py  goods.py  tags.py
src/apps/auth/: auth.py  database.py  manager.py  schemas.py
src/apps/goods/: schemas.py
src/db/: core.py
src/db/models/: goods.py  users.py
src/migrations/: env.py
src/migrations/versions/: d34b46f778c6_02_add_goods_model.py  e1409acaf101_initial.py
